[package]
name = "tokio-postgres-rustls"
description = "Rustls integration for tokio-postgres"
version = "0.12.0"
authors = ["Jasper Hugo <jasper@jasperhugo.com>"]
repository = "https://github.com/jbg/tokio-postgres-rustls"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
ring = { version = "0.17", default-features = false }
rustls = { git = "https://github.com/Apocentre/rustls", branch = "chore/downgrade_zeroize", version = "0.23.8" }
tokio = { version = "1", default-features = false }
tokio-postgres = { version = "0.7", default-features = false }
tokio-rustls = { git = "https://github.com/Apocentre/tokio-rustls", branch = "chore/forked_rustls", version = "0.26", default-features = false }
x509-certificate = {version = "0.23", default-features = false }

[dev-dependencies]
env_logger = { version = "0.11", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
rustls = { git = "https://github.com/Apocentre/rustls", branch = "chore/downgrade_zeroize", version = "0.23", default-features = false, features = ["std", "logging", "tls12", "ring"] }
